--- a/src/browser_action/components/Sidebar/style.less
+++ b/src/browser_action/components/Sidebar/style.less
@@ -59,6 +59,15 @@
 
     &:hover {
         color: #005eb8;
+        &+.glyphicon {
+            color: #66afe9;
+        }
+    }
+
+    &:focus {
+        &+.glyphicon {
+            color: #005eb8;
+        }
     }
 
     &+.glyphicon {
@@ -77,5 +86,43 @@
 
     #app.toggled #sidebar {
         width: 0;
+    }
+}
+
+.sidebar-loading {
+    color: #ccc;
+
+    .glyphicon.spinner {
+        animation: glyphicon-spin 2s infinite cubic-bezier(.85, .15, .85, .15);
+        margin: 20px 0 0 20px;
+        padding: 10px 5px;
+    }
+
+    @keyframes glyphicon-spin {
+        0% {
+            transform: rotate(0deg)
+        }
+        100% {
+            transform: rotate(359deg)
+        }
+    }
+
+    .loading-content {
+        display: inline-block;
+
+        &:after {
+            display: inline-block;
+            overflow: hidden;
+            vertical-align: bottom;
+            animation: ellipsis steps(4,end) 1s infinite;
+            content: "\2026";
+            width: 0;
+
+            @keyframes ellipsis {
+                to {
+                    width: 1.25em;
+                }
+            }
+        }
     }
 }
