add clear search box

--- a/src/browser_action/components/Sidebar/style.less
+++ b/src/browser_action/components/Sidebar/style.less
@@ -51,6 +51,17 @@
             }
         }
     }
+
+    .glyphicon {
+        color: #ccc;
+        position: absolute;
+        right: 0;
+        padding: 33px 10px;
+    }
+
+    .glyphicon-remove:hover {
+        color: #ef2809;
+    }
 }
 
 .form-control {
@@ -68,13 +79,6 @@
         &+.glyphicon {
             color: #005eb8;
         }
-    }
-
-    &+.glyphicon {
-        color: #ccc;
-        position: absolute;
-        right: 0;
-        padding: 33px 10px;
     }
 }
 
