changes: - externalize jQuery - layout product page - date picker for price graph (needs refactoring)

--- a/src/browser_action/pages/Product/style.less
+++ b/src/browser_action/pages/Product/style.less
@@ -1,3 +1,11 @@
+@import "~datepicker.css";
+
+.chart-container {
+  &> div:first-child {
+    background: #fff;
+  }
+}
+
 #product {
   width: 100%;
   position: absolute;
