--- a/src/browser_action/components/Sidebar/style.less
+++ b/src/browser_action/components/Sidebar/style.less
@@ -64,6 +64,12 @@
     }
 }
 
+.sidebar-empty {
+    margin-top: 20px;
+    text-align: center;
+    color: #fff;
+}
+
 .form-control {
     border-radius: 0;
     margin-top: 27px;
