--- a/src/browser_action/components/Sidebar/template.html
+++ b/src/browser_action/components/Sidebar/template.html
@@ -1,6 +1,6 @@
 <div id="sidebar">
-    <div class="sidebar-content" v-show="products.length">
-        <ul class="sidebar-nav">
+    <div class="sidebar-content">
+        <ul class="sidebar-nav" v-show="products.length">
             <li class="sidebar-brand">
                 <input type="search" class="form-control" placeholder="Search products..." v-model="search">
                 <span class="glyphicon glyphicon-search" v-show="!search"></span>
@@ -13,8 +13,11 @@
             </div>
         </ul>
     </div>
-    <div class="sidebar-loading" v-show="!products.length">
+    <div class="sidebar-loading" v-show="loading">
         <span class="glyphicon glyphicon-refresh spinner" />
         <div class="loading-content">Loading products</div>
+    </div>
+    <div class="sidebar-empty" v-show="!(loading || products.length)">
+        No products tracked yet
     </div>
 </div>
