--- a/src/browser_action/pages/Settings/Scan/style.less
+++ b/src/browser_action/pages/Settings/Scan/style.less
@@ -6,3 +6,16 @@
     margin-top: 15px;
   }
 }
+
+.glyphicon.spinner {
+  animation: glyphicon-spin 1s linear;
+}
+
+@keyframes glyphicon-spin {
+  0% {
+    transform: rotate(0deg)
+  }
+  100% {
+    transform: rotate(359deg)
+  }
+}
