--- a/src/browser_action/pages/Product/style.less
+++ b/src/browser_action/pages/Product/style.less
@@ -1,4 +1,5 @@
 @import "~datepicker.css";
+@import (reference) "../../components/LoadingSpinner/style";
 
 .chart-container {
   &> div:first-child {
@@ -10,6 +11,17 @@
   width: 100%;
   position: absolute;
   padding: 15px;
+}
+
+.product-loading {
+  font-size: 36px;
+  width: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: #aaa;
+
+  .loading-mixin;
 }
 
 @media(min-width:768px) {
