bugfixing scan by demand & messaging

--- a/src/browser_action/pages/Settings/Scan/style.less
+++ b/src/browser_action/pages/Settings/Scan/style.less
@@ -8,7 +8,7 @@
 }
 
 .glyphicon.spinner {
-  animation: glyphicon-spin infinite linear;
+  animation: glyphicon-spin 1s infinite linear;
 }
 
 @keyframes glyphicon-spin {
