make content script injection relative to container & add favorite scanner

--- a/src/content_script/style.css
+++ b/src/content_script/style.css
@@ -6,6 +6,11 @@
     margin-top: 1px;
 }
 
+.add-all-favorites {
+    margin: 0 auto;
+    display: block;
+}
+
 .loading-grid {
     margin-top: 10px;
     width: 140px;
