add stubs for sidebar menu

--- a/src/browser_action/components/Sidebar/style.less
+++ b/src/browser_action/components/Sidebar/style.less
@@ -47,6 +47,10 @@
         font-size: 18px;
         line-height: 60px;
 
+        input {
+            margin-top: 1px;
+        }
+
         a {
             color: #fff;
             &:hover {
