--- a/src/browser_action/components/Sidebar/template.html
+++ b/src/browser_action/components/Sidebar/template.html
@@ -1,6 +1,7 @@
 <div id="sidebar">
     <div class="sidebar-content">
         <ul class="sidebar-nav" v-show="products.length">
+            <li><SidebarMenu></SidebarMenu></li>
             <li class="sidebar-brand">
                 <div class="form-group has-feedback">
                     <input type="search" class="form-control" data-toggle="tooltip" :title="i18n('tooltip')"
