use pointer in sidebar menu (css)

--- a/src/browser_action/components/Sidebar/SidebarMenu/style.less
+++ b/src/browser_action/components/Sidebar/SidebarMenu/style.less
@@ -9,6 +9,7 @@
         text-indent: 0;
 
         a {
+            cursor: default;
             color: #CCCCED;
             &:hover {
                 color: #E5E5F6;
